workloads/nginx/ingress/ingress-nipio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actions-ingress
  namespace: actions
spec:
  ingressClassName: nginx
  rules:
  - host: actions.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actions-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketinsights-api-ingress
  namespace: marketinsights
spec:
  ingressClassName: nginx
  rules:
  - host: marketinsights-api.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marketinsights-api-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-price-store-ingress
  namespace: marketinsights
spec:
  ingressClassName: nginx
  rules:
  - host: pricestore.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: price-store-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-mgr-ingress
  namespace: marketinsights
spec:
  ingressClassName: nginx
  rules:
  - host: portfolio-mgr.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-mgr-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: actions
spec:
  ingressClassName: nginx
  rules:
  - host: airflow.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airflow-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-server-ingress
  namespace: marketinsights
spec:
  ingressClassName: nginx
  rules:
  - host: model-server.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: model-server-http-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-server-grpc-ingress
  namespace: marketinsights
  annotations:
    allowed-values: CN=client
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    nginx.ingress.kubernetes.io/auth-tls-secret: marketinsights/tls-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-secret
      hosts:
        - model-server-grpc.192.168.1.203.nip.io
  rules:
  - host: model-server-grpc.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: model-server-grpc-service
            port: 
              number: 8500

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squirrel-stream-nip-ingress
  namespace: public
spec:
  ingressClassName: nginx
  rules:
  - host: stremio-addon.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: squirrel-stream
            port: 
              number: 3001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-proxy-nip-ingress
  namespace: public
spec:
  ingressClassName: nginx
  rules:
  - host: stremio-proxy.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio-proxy-service
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squid-api-nip-ingress
  namespace: public
spec:
  ingressClassName: nginx
  rules:
  - host: squid.192.168.1.203.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: squid-api-service
            port: 
              number: 80
